--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.12.2",
     "expo": "~54.0.12",
     "expo-camera": "~17.0.8",
+    "expo-firebase-analytics": "^4.1.0",
     "expo-haptics": "~15.0.7",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
@@ -26,10 +27,13 @@
     "lottie-react-native": "^7.3.4",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
