--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "@react-navigation/native-stack": "^7.3.26",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
-    "expo": "~54.0.12",
+    "expo": "^54.0.13",
     "expo-camera": "~17.0.8",
-    "expo-firebase-analytics": "^4.1.0",
     "expo-haptics": "~15.0.7",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
